--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-release_2.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-release_2.less
@@ -463,7 +463,7 @@ body.newsletter{
 
 		  .slider--video--section .slider--video--block .slider--video--items .multicarousel--block {
 		    overflow: hidden;
-		    padding: 0 1.5rem;
+		    padding: 0 3.5rem;
 		    width: 100%;
 		    margin: auto;
 		    position: relative;
@@ -493,7 +493,7 @@ body.newsletter{
 		  }
 
 		  .slider--video--section .slider--video--block .slider--video--items .multicarousel--block .btn-primary {
-		    background: #EDECED;
+		    background: #EFEFF0;
 		    height: 100%;
 		  }
 
@@ -524,7 +524,7 @@ body.newsletter{
 			.slider--video--section .slider--video--block .slider--video--items .multicarousel--block .rightLst {
 				position: absolute;
 				top: -19px;
-				right: -11px;
+				right: 0;
 			}
 
 
