--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -5531,12 +5531,16 @@ body.newsletter .hwc-share-widget {
 .node-type-gpa .main-container .slider--video--section .slider--video--block .slider--video--items .multicarousel--block .leftLst {
   position: absolute;
   top: -19px;
-  left: -11px;
+  left: -4px;
 }
 .node-type-gpa .main-container .slider--video--section .slider--video--block .slider--video--items .multicarousel--block .rightLst {
   position: absolute;
   top: -19px;
   right: 0;
+}
+.node-type-gpa .main-container .btn:active,
+.node-type-gpa .main-container .btn.active {
+  box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.125);
 }
 .node-type-gpa .main-container .group-participate {
   background: url(../images/gpa-how-to-participate-background.png) no-repeat;
