--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-release_2.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-release_2.less
@@ -518,13 +518,17 @@ body.newsletter{
 			.slider--video--section .slider--video--block .slider--video--items .multicarousel--block .leftLst {
 				position: absolute;
 				top: -19px;
-				left: -11px;
+				left: -4px;
 			}
 
 			.slider--video--section .slider--video--block .slider--video--items .multicarousel--block .rightLst {
 				position: absolute;
 				top: -19px;
 				right: 0;
+			}
+
+			.btn:active, .btn.active{
+				 box-shadow: inset 0 0 0 rgba(0, 0, 0, 0.125);
 			}
 
 
