--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-release_2.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-release_2.less
@@ -368,7 +368,7 @@ body.newsletter{
 		.field-name-field-introductory-text{
 			float: left;
 			width: 70%;
-			padding: 1em;
+			padding: 1em 1em 0 0;
 			margin-top: 1em;
 		}
 		.field-name-body{
@@ -559,12 +559,16 @@ body.newsletter{
 			.field-name-field-participate-description{
 				float: left;
 				width: 70%;
+    			padding-top: 5px;
+    			padding-right: 2em;
 			}
 			.field-collection-container{
 				float: right;
 				width: 30%;
 				.field-label{
-					padding-left: 1em;
+					padding-left: 14px;
+					font-size: 1.3em;
+					font-weight: normal;
 				}
 			}
 			.field-collection-view, .field-collection-container{
@@ -616,12 +620,14 @@ body.newsletter{
 				}
 			}			
 		}
-
-
-
 	}
 }
 
+.download-link{
+	background: url(../images/download-ico-white.png) 100% 10% no-repeat;
+    display: inline-block !important;
+    padding-right: 2em;
+}
 
 
 
