--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-release_2.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-release_2.less
@@ -495,6 +495,10 @@ body.newsletter{
 		  .slider--video--section .slider--video--block .slider--video--items .multicarousel--block .btn-primary {
 		    background: #EFEFF0;
 		    height: 100%;
+		    cursor: pointer;
+		    &:hover{
+		    	opacity: 0.9;
+		    }
 		  }
 
 		  .slider--video--section .slider--video--block .slider--video--items .multicarousel--block .leftLst.over img {
@@ -508,7 +512,7 @@ body.newsletter{
 			    position: absolute;
 			    display: block !important;
 			    z-index: 15;
-			    width: 92%;
+			    width: 90%;
 			    list-style: none;
 			    text-align: center;
 			    bottom: -14px;
