--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-release_2.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-release_2.less
@@ -370,6 +370,13 @@ body.newsletter{
 			width: 70%;
 			padding: 1em 1em 0 0;
 			margin-top: 1em;
+			a{
+				font-weight: bold;
+			}
+			a[target=_blank]{
+				background: url(../images/target-blank-blue.png) 98% 4px no-repeat;
+    			padding-right: 20px;
+			}
 		}
 		.field-name-body{
 			float: left;
@@ -548,9 +555,11 @@ body.newsletter{
 			padding: 2em;
 			color:#FFF;
 			float: left;
+
 			h3{
 				padding: 0;
 			}
+
 			a{
 				color:#FFF;
 				font-weight: bold;
@@ -560,6 +569,13 @@ body.newsletter{
 					text-decoration:underline;
 				}
 			}
+
+			a[target=_blank]{
+				background: url(../images/target-blank-white.png) 98% 2px no-repeat;
+    			padding-right: 30px;
+    			display: inline-block;
+			}
+
 			.field-name-field-participate-description{
 				float: left;
 				width: 70%;
