--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-release_2.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-release_2.less
@@ -424,19 +424,23 @@ body.newsletter{
 			 
 			h2.block-title{
 				color: #003399;
-				padding-top: 1em;
-				padding-bottom: 1em;
+				padding-top: 0.3em;
+    			padding-bottom: 1em;
+    			padding-left: 0.4em;
 			}
 
 			.multicarousel--block{
-				height: 190px;
+				height: 200px;
 			}
 
 			.item{
 				p{
-					border:2px solid #DEE999;
-					padding: 3em;
-    				margin: 0 1em;
+					border: 2px solid #DEE999;
+					padding: 1.5em;
+					margin: 0 1em;
+					font-weight: 700;
+					text-align: center;
+					font-size: 1.2em;
 				}
 			}
 			
@@ -448,23 +452,22 @@ body.newsletter{
 		}
 
 		ol.multicarousel-indicators li.active {
-    		background: #003399;
+    		background: #ACC700;
   		}
 
 
 
 		  ol.multicarousel-indicators li {
 		    vertical-align: middle;
-		    border: 1px solid #003399;
+		    border: 2px solid #59595A;
 		    display: inline-block;
-		    width: 10px;
-		    height: 10px;
+		    width: 15px;
+		    height: 15px;
 		    margin: 0px 2px;
 		    text-indent: -999px;
 		    border-radius: 10px;
 		    cursor: pointer;
-		    background-color: #000 \9;
-		    background-color: rgba(0,0,0,0);
+		    background-color: #EFEFF0;
 		  }
 
 
@@ -522,7 +525,7 @@ body.newsletter{
 			    width: 90%;
 			    list-style: none;
 			    text-align: center;
-			    bottom: -14px;
+			    bottom: -11px;
 			}
 
 			
