--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-release_2.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-release_2.less
@@ -441,6 +441,7 @@ body.newsletter{
 					font-weight: 700;
 					text-align: center;
 					font-size: 1.2em;
+					min-height: 150px;
 				}
 			}
 			
@@ -699,6 +700,28 @@ body.newsletter{
 		}
 	}
 
+}
+
+@media (max-width: 768px) {
+	
+	/* Good Practice Awards - GPA */
+	.node-type-gpa{ 
+		.main-container{ 
+			.field-name-field-introductory-text{
+				width: 100%;
+			}
+			.field-name-body{
+				width: 100%;
+			}
+			.click-here-to-see{
+				a{
+					width: 100%;
+					height: auto;
+					max-width: 463px;
+				}
+			}
+		}
+	}	
 }
 
 @media (max-width: 669px) {
