--- a/docroot/sites/all/themes/hwc_frontend/less/hwc20-release_2.less
+++ b/docroot/sites/all/themes/hwc_frontend/less/hwc20-release_2.less
@@ -677,6 +677,14 @@ body.newsletter{
 		}
 	}
 
+	.node-type-gpa{
+		.main-container{
+			h2{
+				margin-left: 0;
+			}
+		} 
+	}
+
 }
 
 @media (max-width: 990px) {
@@ -718,6 +726,7 @@ body.newsletter{
 					width: 100%;
 					height: auto;
 					max-width: 463px;
+					min-height: 165px;
 				}
 			}
 		}
