--- a/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
+++ b/docroot/sites/all/themes/hwc_frontend/css/hwc20-style.css
@@ -5611,18 +5611,21 @@ body.newsletter .hwc-share-widget {
 }
 .node-type-gpa #faq .panel-default > .panel-heading {
   background: transparent;
+  padding: 13px 15px;
 }
 .node-type-gpa #faq .panel-default > .panel-heading h4 a {
   color: #003399;
 }
-.node-type-gpa #faq .panel-default > .panel-heading h4:before {
-  content: "\e252";
+.node-type-gpa #faq .panel-default > .panel-heading h4 a:before {
+  content: "\e253";
   font-family: "Glyphicons Halflings";
   margin-left: 10px;
   float: right;
+  color: #ACC700;
 }
-.node-type-gpa #faq .panel-default > .panel-heading h4.active:before {
-  content: "\e253";
+.node-type-gpa #faq .panel-default > .panel-heading h4 a.collapsed:before {
+  content: "\e252";
+  color: #ACC700;
 }
 .node-type-gpa #faq .panel-default:nth-child(1) {
   border-top: 2px solid #DEE999;
